--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.29.1",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
