--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "plotly.js": "^3.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.29.1",
+    "recharts": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
