--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@blueskyproject/finch": "^0.1.3",
-    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs": "3.21.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -31,7 +31,7 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.29.1",
     "recharts": "^3.0.2",
-    "scikitjs": "^1.24.0",
+    "scikitjs": "1.24.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
