--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-tooltip": "^5.29.1",
     "recharts": "^3.0.2",
     "scikitjs": "1.24.0",
